fixed dimension alignment issues with all card panels of my bookings

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -123,6 +123,10 @@ body {
     align-items: center;
     margin-bottom: 5px;
 }
+.card-size {
+    width: 240px !important;
+    height: 355px !important;
+}
 
 .delete-btn {
     color: #1b191f ;
